# onspy

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SKILL.md  download_all.py  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py  example_housing_costs.py  example_religion_immigration_choropleth.py  example_weekly_deaths.py  example_wellbeing.ipynb
src/onspy/: __init__.py  __main__.py  boundaries.py  cli.py  client.py  core.py  parquet_sync.py  server.py  utils.py
tests/: conftest.py  test_boundaries.py  test_browse.py  test_client.py  test_code_lists.py  test_datasets.py  test_get.py  test_integration.py  test_parquet_sync.py  test_search.py  test_utils.py
