[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onspy"
version = "0.2.0"
description = "Python and MCP tooling for the Office for National Statistics (ONS) API"
readme = "README.md"
authors = [{ name = "Joe Wait" }]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "ons",
    "statistics",
    "data",
    "api",
    "uk",
    "office for national statistics",
    "mcp",
]
dependencies = [
    "cyclopts>=3.0.0",
    "fastmcp>=3.0.0",
    "pandas>=1.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
cli = ["fastmcp>=3.0.0", "cyclopts>=3.0.0", "rich>=13.0.0"]
all = ["fastmcp>=3.0.0", "cyclopts>=3.0.0", "rich>=13.0.0"]

[project.scripts]
onspy = "onspy.__main__:main"

[project.entry-points."mcp.servers"]
onspy = "onspy.server:mcp"

[project.urls]
"Homepage" = "https://github.com/Joe-Wait/onspy"
"Bug Tracker" = "https://github.com/Joe-Wait/onspy/issues"
"Documentation" = "https://github.com/Joe-Wait/onspy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
